// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectUsersAdd /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Add User(s) to Project
  </h3>,
  .emotion-0 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-3 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  color: #73b61c;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="copyLink"
    >
      A user must have an account to be added. Accounts can be created here:
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-3"
        id="copyLink"
        readOnly={true}
        type="text"
        value="http://localhost/create-account"
      />
      <div
        className="emotion-4"
      >
        <button
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          Copy Link
        </button>
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover {
  border: 2px solid #ffffff;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-6 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-7 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  clear: both;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-11 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-13 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-15 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-16 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-33 button,
.emotion-33 a {
  margin-right: 16px;
}

.emotion-34 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-34,
.emotion-34:hover,
.emotion-34:visited {
  background-color: #73b61c;
}

.emotion-34:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-34[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="emails"
      >
        Email(s)
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoFocus={true}
          className="emotion-4"
          disabled={false}
          id="emails"
          name="emails"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-6"
    >
      <legend
        className="emotion-7"
      >
        Add Roles
      </legend>
      
      <div
        className="emotion-8"
      />
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ML_Tools"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            ML Tools
          </span>
          <span
            className="emotion-16"
          >
            Provides access to the Job Queue, Data Sources, and Visualizer.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="API_Keys"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            API Keys
          </span>
          <span
            className="emotion-16"
          >
            Provides access to API Key provisioning.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="User_Admin"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            User Admin
          </span>
          <span
            className="emotion-16"
          >
            Allows adding and removing users as well as managing their roles. This includes adding and removing their own roles.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-33"
    >
      <button
        aria-disabled={true}
        className="emotion-34"
        onClick={[Function]}
        type="submit"
      >
        Add
      </button>
    </div>
  </form>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 2`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Add User(s) to Project
  </h3>,
  .emotion-0 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-3 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  color: #73b61c;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="copyLink"
    >
      A user must have an account to be added. Accounts can be created here:
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-3"
        id="copyLink"
        readOnly={true}
        type="text"
        value="http://localhost/create-account"
      />
      <div
        className="emotion-4"
      >
        <button
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          Copy Link
        </button>
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover {
  border: 2px solid #ffffff;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-6 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-7 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  clear: both;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-11 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-13 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-15 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-16 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-19 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-21 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-33 button,
.emotion-33 a {
  margin-right: 16px;
}

.emotion-34 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-34,
.emotion-34:hover,
.emotion-34:visited {
  background-color: #73b61c;
}

.emotion-34:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-34[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="emails"
      >
        Email(s)
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoFocus={true}
          className="emotion-4"
          disabled={false}
          id="emails"
          name="emails"
          onChange={[Function]}
          type="text"
          value="jane@email.com"
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-6"
    >
      <legend
        className="emotion-7"
      >
        Add Roles
      </legend>
      
      <div
        className="emotion-8"
      />
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={true}
            onClick={[Function]}
            type="checkbox"
            value="ML_Tools"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            ML Tools
          </span>
          <span
            className="emotion-16"
          >
            Provides access to the Job Queue, Data Sources, and Visualizer.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-19"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="API_Keys"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-21"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            API Keys
          </span>
          <span
            className="emotion-16"
          >
            Provides access to API Key provisioning.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-19"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="User_Admin"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-21"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            User Admin
          </span>
          <span
            className="emotion-16"
          >
            Allows adding and removing users as well as managing their roles. This includes adding and removing their own roles.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-33"
    >
      <button
        className="emotion-34"
        onClick={[Function]}
        type="submit"
      >
        Add
      </button>
    </div>
  </form>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 3`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #3b3b3b;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #2e2e2e;
}

.emotion-3 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-4 {
  padding-top: 12px;
  padding-bottom: 12px;
  color: #808080;
}

.emotion-5 {
  padding-top: 12px;
}

.emotion-6 {
  display: block;
  color: #808080;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-8 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  color: #73b61c;
}

.emotion-10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-13 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-13 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

.emotion-15 {
  padding-top: 12px;
  color: #808080;
}

.emotion-17 {
  color: #b3b3b3;
}

.emotion-18 {
  font-weight: 700;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-19 button,
.emotion-19 a {
  margin-right: 16px;
}

.emotion-20 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-20,
.emotion-20:hover,
.emotion-20:visited {
  background-color: #808080;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-20[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-21,
.emotion-21:hover,
.emotion-21:visited {
  background-color: #73b61c;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<div>
    <div
      className="emotion-0"
    >
      <div
        className="emotion-1"
      >
        <svg
          color="#c92300"
          data-file-name="warning.svg"
          height={20}
        />
        <div
          className="emotion-2"
          role="alert"
        >
          Users not added.
        </div>
      </div>
    </div>
    <h3
      className="emotion-3"
    >
      Users that Need an Account
    </h3>
    <div
      className="emotion-4"
    >
      danny@zorroa.com
    </div>
    <div
      className="emotion-5"
    >
      <label
        className="emotion-6"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-7"
      >
        <input
          className="emotion-8"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-9"
        >
          <button
            className="emotion-10"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-0"
    >
      <div
        className="emotion-12"
      >
        <svg
          color="#009f22"
          data-file-name="checkmark.svg"
          height={20}
        />
        <div
          className="emotion-13"
          role="alert"
        >
          Users added.
        </div>
      </div>
    </div>
    <h3
      className="emotion-3"
    >
      Users Added
    </h3>
    <div
      className="emotion-15"
    >
      tester@fake.com
    </div>
    <h3
      className="emotion-3"
    >
      Roles
    </h3>
    <ul
      className="emotion-17"
    >
      <li
        className="emotion-18"
      >
        ML Tools
      </li>
    </ul>
    <div
      className="emotion-19"
    >
      <button
        className="emotion-20"
        onClick={[Function]}
        type="button"
      >
        Add Another User
      </button>
      <a
        className="emotion-21"
        href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        View All
      </a>
    </div>
  </div>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 4`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-5 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Add User(s) to Project
  </h3>,
  .emotion-0 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-3 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited {
  color: #73b61c;
}

.emotion-5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

<div
    className="emotion-0"
  >
    <label
      className="emotion-1"
      htmlFor="copyLink"
    >
      A user must have an account to be added. Accounts can be created here:
    </label>
    <div
      className="emotion-2"
    >
      <input
        className="emotion-3"
        id="copyLink"
        readOnly={true}
        type="text"
        value="http://localhost/create-account"
      />
      <div
        className="emotion-4"
      >
        <button
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          Copy Link
        </button>
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover {
  border: 2px solid #ffffff;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-6 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-7 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  clear: both;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 0;
  padding-bottom: 16px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-11 {
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-12 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-13 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 12px;
}

.emotion-15 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-16 {
  padding-left: 0;
  color: #b3b3b3;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-33 button,
.emotion-33 a {
  margin-right: 16px;
}

.emotion-34 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-34,
.emotion-34:hover,
.emotion-34:visited {
  background-color: #73b61c;
}

.emotion-34:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-34[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="emails"
      >
        Email(s)
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoFocus={true}
          className="emotion-4"
          disabled={false}
          id="emails"
          name="emails"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <fieldset
      className="emotion-6"
    >
      <legend
        className="emotion-7"
      >
        Add Roles
      </legend>
      
      <div
        className="emotion-8"
      />
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="ML_Tools"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            ML Tools
          </span>
          <span
            className="emotion-16"
          >
            Provides access to the Job Queue, Data Sources, and Visualizer.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="API_Keys"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            API Keys
          </span>
          <span
            className="emotion-16"
          >
            Provides access to API Key provisioning.
          </span>
        </div>
      </label>
      <label
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <input
            className="emotion-11"
            defaultChecked={false}
            onClick={[Function]}
            type="checkbox"
            value="User_Admin"
          />
          <div
            className="emotion-12"
          >
            <svg
              className="emotion-13"
              data-file-name="checkmark.svg"
              height={20}
            />
          </div>
        </div>
        <div
          className="emotion-14"
        >
          <span
            className="emotion-15"
          >
            User Admin
          </span>
          <span
            className="emotion-16"
          >
            Allows adding and removing users as well as managing their roles. This includes adding and removing their own roles.
          </span>
        </div>
      </label>
    </fieldset>
    <div
      className="emotion-33"
    >
      <button
        aria-disabled={true}
        className="emotion-34"
        onClick={[Function]}
        type="submit"
      >
        Add
      </button>
    </div>
  </form>,
]
`;
